# flexmap

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISTRIBUTION.md  LICENSE-APACHE  LICENSE-MIT  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.claude/: settings.local.json
.claude/skills/updateme/: SKILL.md
.github/workflows/: e2e.yml  release-build.yml
docs/: input-backends.md  react-zustand.md  spout-windows.md  tailwind-vite.md  tauri-ipc.md  wgpu.md
docs/ideas/: pixel-mapping-effect.md
docs/plans/: 2026-03-07-dependency-upgrades-design.md  2026-03-07-dependency-upgrades-plan.md  2026-03-07-frontend-ux-rework-design.md  2026-03-07-frontend-ux-rework-plan.md  2026-03-13-live-controls-panel-design.md  2026-03-13-live-controls-panel.md
e2e-tests/: package-lock.json  package.json  wdio.conf.js
e2e-tests/specs/: layers.js  persistence.js  smoke.js
scripts/: release-mac.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  projector.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/input/: adapter.rs  media.rs  mod.rs  shader.rs  test_pattern.rs
src-tauri/src/input/ndi/: mod.rs
src-tauri/src/input/spout/: mod.rs
src-tauri/src/input/syphon/: bridge.h  bridge.m  mod.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/renderer/: buffer_cache.rs  engine.rs  gpu.rs  mod.rs  pipeline.rs  projector.rs  shaders.rs  texture_manager.rs
src-tauri/src/scene/: group.rs  history.rs  layer.rs  mod.rs  project.rs  state.rs
src/components/calibration/: CalibrationBar.tsx
src/components/common/: BpmWidget.tsx  KeyboardOverlay.tsx  PerformancePanel.tsx  SettingsModal.tsx  ShaderLibraryModal.tsx  ShaderPreviewCanvas.tsx  SourcePanel.tsx  StatusBar.tsx  ToastContainer.test.tsx  ToastContainer.tsx  Toolbar.test.tsx  Toolbar.tsx
src/components/controls/: BlendModePicker.test.tsx  BlendModePicker.tsx  NumericField.test.tsx  NumericField.tsx  Popover.tsx  Slider.test.tsx  Slider.tsx  SourcePicker.tsx
src/components/editor/: CoordinateHUD.tsx  EditorCanvas.tsx  Magnifier.tsx
src/components/layers/: LayerPanel.tsx
src/components/left/: LeftPanel.tsx
src/components/live/: LiveControlsPanel.tsx  TempoCard.tsx
src/components/output/: OutputConfigPanel.tsx  ProjectorView.tsx
src/components/properties/: InspectorPane.tsx  PropertiesPanel.test.tsx  PropertiesPanel.tsx
src/components/properties/panes/: AssignmentPane.tsx  (+3 more)
src/hooks/: useKeyboardShortcuts.ts
src/lib/: aspect-ratios.test.ts  aspect-ratios.ts  dimmer-fx.test.ts  dimmer-fx.ts  math.test.ts  math.ts  shader-library.ts  shader-thumbnail.ts  shared-input.ts  tauri-bridge.test.ts  tauri-bridge.ts
src/store/: useAppStore.test.ts  useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
(+7 files in other folders)
