[package]
name = "flexmap"
version = "0.1.0"
edition = "2021"
description = "Lightweight projection mapping for live visual artists"
license = "MIT OR Apache-2.0"

[features]
default = ["input-syphon"]
input-spout = ["dep:windows"]
input-syphon = []

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
wgpu = "23"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
parking_lot = "0.12"
notify = "7"
base64 = "0.22"
sysinfo = "0.32"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[lib]
name = "flexmap_lib"
crate-type = ["lib", "cdylib", "staticlib"]
