[package]
name = "flexmap"
version = "0.2.0"
edition = "2021"
description = "Lightweight projection mapping for live visual artists"
license = "MIT OR Apache-2.0"

[features]
default = ["input-syphon"]
input-spout = []
input-syphon = []

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
wgpu = "23"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
raw-window-handle = "0.6"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
parking_lot = "0.12"
notify = "7"
base64 = "0.22"
sysinfo = "0.32"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
cpal = "0.15"
rustfft = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }
windows-core = "0.61"
webview2-com = "0.38"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[lib]
name = "flexmap_lib"
crate-type = ["lib", "cdylib", "staticlib"]
